--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "knex": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
